# into_tuple

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  lib.rs.template
src/: lib.rs  test.rs
